--- a/GameHub.css
+++ b/GameHub.css
@@ -119,7 +119,61 @@ img {
     size-adjust: auto;
 }
 
-.news img{
+
+
+.buttons {
+    display: flex;
+   flex-direction: column;
+}
+
+.btn {
+    text-decoration: none;
+    padding: 5px 20px;
+    font-size: 1.10rem;
+    position: relative;
+    margin: 10px;
+}
+
+/*button 1*/
+
+.btn-1{
+   background: #000000; 
+   color: #ffffff;
+   border-radius: 10px;
+   transition: transform 0.3s ease;
+}
+
+.btn-1::after, .btn-1::before {
+    content: "";
+    position: absolute;
+    opacity: 0.3;
+    background: black;
+    border-radius:inherit;
+    width: 100%;
+    height: 100%;
+    left: 0;
+    bottom: 0;
+    z-index: -1;
+    transition: transform 0.3s ease;
+}
+
+.btn-1:hover{
+    transform: translate(-12px,-12px);
+}
+
+.btn-1:hover::after{
+    transform: translate(6px,6px);
+}
+
+.btn-1:hover::before{
+    transform: translate(12px,12px);
+}
+
+
+
+
+
+.news img {
    
     max-width: 100%;
     max-height: 100%;
