--- a/GameHub.css
+++ b/GameHub.css
@@ -1,6 +1,6 @@
 body {
     background-color: #18295c;
-    margin: 0;
+    margin: 0px;
     font-family: Arial, Helvetica, sans-serif;
     font-weight: bold;
     font-size: 20px;
@@ -14,20 +14,20 @@ body {
     display:grid;
     grid-template-columns:repeat(6, 1fr);
     grid-template-rows: repeat(8, 1fr);
-    gap: 10px
+    gap: 5px
    
 
 }
 .container div{
-    padding: 0px;
+    padding: 10px;
     border: solid #ffffff;
 }
 
 
 
 .header{
-    grid-column-start: 1;
-    grid-column-end: span 6;
+    grid-column-start: 2;
+    grid-column-end: 6;
     grid-row-start: 1;
     grid-row-end: 1;
     color: #000000;
@@ -105,41 +105,42 @@ nav {
 }
 
 ul{
-    padding: 0%;
-    margin: 0 0 0 0 250px;
-    list-style: none;
+    padding: 0px;
+    margin:auto;
+    list-style:none;
+    
 
 }
 
 li{
-    float: left;
+    float:left;
     
 }
 
 li a{
-    width: 250px;
-    display: block;
-    padding: 25px 15px;
+    width:200px;
+    display:inline-block;
+    padding: 15px 1px;
     text-decoration: none;
     font-family: Arial, Helvetica, sans-serif;
     color: white;
-    text-align: center;
+    text-align:center;
     
 
 }
 
 li a:hover{
     background: #2d87a8;
-    text-transform: uppercase;
+    text-transform:uppercase;
+    text-align: center;
 }
 /*logo*/
 img {
-    max-width: 5%;
-    max-width: 13%;
-    float: left;
-    margin-top: -3.5cm;
-    margin-left: 1cm;
-    size-adjust: auto;
+    max-width: 10px;
+    max-width: 150px;
+    float:left;
+    margin-top: -3cm;
+    margin-left: -4.5cm;
 }
 
 
@@ -153,7 +154,7 @@ img {
     text-decoration: none;
     padding: 5px 20px;
     font-size: 1.10rem;
-    position: relative;
+    position:relative;
     margin: 10px;
 }
 
@@ -162,39 +163,26 @@ img {
 .btn-1{
    background: black; 
    color: #ffffff;
-   border-radius: 10px;
-   transition: transform 0.3s ease;
+   border-radius: 5px;
+   display: inline-block;
+   
 }
 
-.btn-1::after, .btn-1::before {
-    content: "";
-    position: absolute;
-    opacity: 0.3;
-    background: black;
-    border-radius:inherit;
-    width: 100%;
-    height: 100%;
-    left: 0;
-    bottom: 0;
-    z-index: -1;
-    transition: transform 0.3s ease;
+@media only screen and (max-width:700px) {
+    nav ul {
+        width: 100%;
+        background:#18295c;
+    }
+
+
+    nav ul li {
+        display: block;
+        margin-top: 10px;
+        margin-bottom: 10px;
+        
+    }
+
+    nav ul li a{
+        color:#30e8d4;
+    }
 }
-
-.btn-1:hover{
-    transform: translate(-12px,-12px);
-}
-
-.btn-1:hover::after{
-    transform: translate(6px,6px);
-}
-
-.btn-1:hover::before{
-    transform: translate(12px,12px);
-}
-
-
-
-
-
-
-
